<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".countryDetails.DetailsActivity">

        <include
            android:id="@+id/include"
            layout="@layout/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
            app:layout_constraintTop_toBottomOf="@id/imageView2"
            app:srcCompat="@drawable/ellipse2" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
            app:layout_constraintTop_toBottomOf="@+id/imageView8"
            app:srcCompat="@drawable/vector" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
            app:layout_constraintTop_toBottomOf="@+id/imageView4"
            app:srcCompat="@drawable/ellipse1" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
            app:layout_constraintTop_toBottomOf="@+id/imageView6"
            app:srcCompat="@drawable/ellipse2" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
            app:layout_constraintTop_toBottomOf="@+id/imageView7"
            app:srcCompat="@drawable/ellipse1" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
            app:layout_constraintTop_toBottomOf="@+id/imageView5"
            app:srcCompat="@drawable/vector" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
            app:layout_constraintTop_toBottomOf="@id/imageView3"
            app:srcCompat="@drawable/vector" />

        <ImageView
            android:id="@+id/image1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/planet"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include" />

        <ImageView
            android:id="@+id/image2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:src="@drawable/pngwing"
            app:layout_constraintTop_toTopOf="@id/image1" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="88dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image2">

            <TextView
                android:id="@+id/details_country_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/country" />

            <TextView
                android:id="@+id/details_country_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/details_text_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/capital" />

            <TextView
                android:id="@+id/details_capital_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/details_text_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/region" />

            <TextView
                android:id="@+id/details_region_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/details_text_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/currency" />

            <TextView
                android:id="@+id/details_curency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/details_text_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/languages" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/langRV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
            app:layout_constraintTop_toBottomOf="@+id/image2"
            app:srcCompat="@drawable/ellipse1" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:srcCompat="@drawable/vector" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/detailsProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:indeterminateTint="@color/bronze_500"
        android:visibility="invisible" />
</RelativeLayout>